2007-02-07  Dave Brolley  <brolley@redhat.com>

	* rebuild.mk (all-binutils,all-gas,all-ld): Depend on
	mep-reconfig-opcodes.

2007-01-03  Dave Brolley  <brolley@redhat.com>

	* lex.cfg.c: Regenerated.
	* lex.cmodel.c: Regenerated.
	* lex.gmap.c: Regenerated.

2006-12-07  Dave Brolley  <brolley@redhat.com>

	* rebuild.mk (mep-reconfig, mep-reconfig-opcodes) 
	(mep-reconfig-sid, mep-reconfig-gcc, mep-rebuild-gcc) 
	(mep-rebuild-target-libgloss, mep-reinstall-gcc) 
	(mep-reinstall-gdb, mep-reinstall-sid, all-gdb): Rework
	dependencies for correct parallel make.
	(configure-opcodes, configure-sid, configure-gcc) 
	(configure-utils): New targets for parallel make.

2005-10-12  Dave Brolley  <brolley@redhat.com>

	* mepcfgtool.c (generate_simulator_script): Correct output for
	the CLP abd BIT options.

2005-08-22  Dave Brolley  <brolley@redhat.com>

	* current.cfg: New file, automatically generated by MeP-Integrator.

2005-08-22  DJ Delorie  <dj@redhat.com>

	* mepcfgtool.c (do_extra_headers): Add stdint.h, simplify the
	logic.

2005-07-29  Dave Brolley  <brolley@redhat.com>

	* Merge Changes from latest branch:
	2005-06-30  Dave Brolley  <brolley@redhat.com>

	* mepcfgtool.c (irq_t): Member 'media_module' renamed to 'src-module'.
	(modules_so_far): Now static at file scope.
	(n_msf): Likewise.
	(add_msf): New static function.
	(check_irq_mod): Reworked. Returns module which is the source of the
	irq.
	(check_irq_range): Now takes only one argument.
	(do_sidmain_config): Scan all irqs before processing any modules. Call
	add_msf for modules with no IRQ spec.

	2005-06-14  Dave Brolley  <brolley@redhat.com>

	* verify-cfg.c (check_arcadia_isa): Warn when ACDB is used within COP.
	* avc.acd,avc2.acd: Removed

	2005-05-02  Dave Brolley  <brolley@redhat.com>

	* mepcfgtool.c (scan_cop_ip): New static function.
	(do_user_cop_ip): Call scan_cop_ip.
	(do_user_isa_includes): Don't scan for COP.IP here.
	(do_cgen_config_opc): Generate parse and print handlers for COP.IP